# quill

./: .gitignore  CLAUDE.md  CODE_FIX_REPORT.md  CODE_REVIEW_GPT55.md  Cargo.toml  README.md  ROADMAP.md
assets/web/: index.html  sw.js
docs/: conventions.md  invariants.md  tech-debt.md
docs/adr/: 0001-language-rust.md  0002-stack-lock.md  0003-signal-hook.md  0004-calloop-unified-loop.md  0005-image-crate-png-encoding.md  0006-xkbcommon-keyboard-decoder.md  0007-wayland-protocols-text-input-v3.md  0008-cursor-shape-v1.md  0009-wl-cursor-fallback.md  0010-unicode-width-crate.md  0011-selection-pos-viewport-relative-i32-line.md  0012-selection-rebase-on-grid-scroll.md  0013-inline-completion-composer.md  0014-completion-help-probe-bwrap-sandbox.md  0015-headless-kernel-split.md  0016-websocket-transport.md  0017-websocket-calloop-single-thread.md  0018-sharing-as-supervised-child-process.md  0019-federation-single-kernel-share-anchor.md  0020-kernel-boot-service-lockfree-rendezvous.md
docs/audit/: 2026-04-24-T-0102-review.md  2026-04-24-T-0106-review.md  2026-04-24-T-0107-review.md  2026-04-24-phase1-merged.md  2026-04-25-T-0104-review.md  2026-04-25-T-0108-T-0301-review.md  2026-04-25-T-0201-review.md  2026-04-25-T-0202-T-0303-handoff.md  2026-04-25-T-0202-review.md  2026-04-25-T-0203-review.md  2026-04-25-T-0204-review.md  2026-04-25-T-0205-review.md  2026-04-25-T-0206-review.md  2026-04-25-T-0302-review.md  2026-04-25-T-0303-review.md  2026-04-25-T-0304-review.md  2026-04-25-T-0305-review.md  2026-04-25-T-0306-review.md  2026-04-25-T-0307-review.md  2026-04-25-T-0399-review.md  2026-04-25-T-0401-review.md  2026-04-25-T-0402-review.md  2026-04-25-T-0403-review.md  2026-04-25-T-0404-review.md  2026-04-25-T-0405-review.md  2026-04-25-T-0406-review.md  2026-04-25-T-0407-review.md  2026-04-25-T-0408-review.md  2026-04-25-T-0501-review.md  2026-04-25-T-0502-review.md  2026-04-25-T-0503-review.md  2026-04-25-T-0504-review.md  2026-04-25-T-0505-review.md  2026-04-25-mainline-audit-phase3-end.md  2026-04-25-phase2-planning-review.md  2026-04-26-T-0601-review.md  2026-04-26-T-0602-review.md  2026-04-26-T-0603-review.md  2026-04-26-T-0604-review.md  2026-04-26-T-0701-review.md  (+3 more)
docs/notes/: debug_log_trace_methodology.md  ghostty_nvidia_competitor_research.md  inline_completion_design.md  linux_gaming_traps.md  nvidia_wayland_locks.md  re_vendored_binary_protocol_truth.md  terminal_colorterm_truecolor.md  terminal_inverse_flag_cursor.md  terminal_pty_no_auto_scroll.md  wayland_dnd_set_actions.md  wayland_proxy_drop_lifecycle.md  wayland_scroll_axis_value120.md
docs/screenshots/: T-0305-color-block.md
logs/: .e7f95f7f23e5b9afc11f258ccd6be355cf994d5a-audit.json
scripts/: ci.sh
scripts/hooks/: pre-push
src/: event_loop.rs  frame_stats.rs  lib.rs  main.rs
src/completion/: bootstrap.rs  cache.rs  help_indexer.rs  mod.rs  parser.rs  path_binaries.rs  worker.rs
src/completion/dynamic_hooks/: cd.rs  docker.rs  git_branch.rs  git_status.rs  kill_proc.rs  kubectl.rs  mod.rs  pacman.rs  readdir.rs  ssh.rs  systemctl.rs
src/composer/: fuzzy.rs  mod.rs  prompt_track.rs  state.rs  tokenizer.rs
src/ime/: mod.rs
src/kernel/: daemon.rs  feed.rs  mod.rs  proto.rs  session.rs
src/pty/: mod.rs
src/tab/: mod.rs
src/term/: mod.rs
src/text/: mod.rs
src/wl/: dnd.rs  keyboard.rs  mod.rs  pointer.rs  render.rs  selection.rs  window.rs
tasks/: README.md  T-0101-wayland-window.md  T-0102-wgpu-surface.md  T-0103-resize-handling.md  T-0104-close-handling.md  T-0105-event-loop.md  T-0106-frame-stats.md  T-0107-state-machine-tests.md  T-0108-calloop-unify.md  T-0201-pty-spawn.md  T-0202-pty-calloop-register.md  T-0203-pty-bytes-trace.md  T-0204-pty-resize-winsize.md  T-0205-child-exit-close.md  T-0206-integration-echo.md  T-0301-alacritty-term-integration.md  T-0302-term-render-api.md  T-0303-cursor-tracking.md  T-0304-scrollback-buffer.md  T-0305-color-block-rendering.md  T-0306-wayland-resize-sync.md  T-0307-ls-la-e2e.md  T-0399-mainline-housekeeping.md  T-0401-cosmic-text-init.md  T-0402-shaping-pipeline.md  T-0403-glyph-rasterization-atlas.md  T-0404-hidpi-2x-scale.md  T-0405-cjk-fallback-verify.md  T-0406-glyph-atlas-clear-on-full.md  T-0407-font-face-lock-emoji-exclude.md  T-0408-headless-screenshot.md  T-0409-hotfix-wgpu-limits.md  T-0501-wl-keyboard-xkb.md  T-0502-wl-output-buffer-scale.md  T-0503-xdg-decoration.md  T-0504-csd-titlebar-pointer.md  T-0505-fcitx5-text-input-v3.md  T-0601-cursor-render.md  T-0602-scrollback.md  T-0603-keyboard-repeat.md  (+21 more)
tests/: atlas_clear_on_full.rs  buffer_scale.rs  cjk_fallback_e2e.rs  csd_e2e.rs  cursor_render_e2e.rs  event_loop_smoke.rs  frame_stats_integration.rs  frame_stats_smoke.rs  ghostty_tab_polish_e2e.rs  glyph_atlas.rs  headless_screenshot.rs  ime_e2e.rs  ime_preedit_render.rs  kernel_daemon_slice.rs  kernel_federation_slice.rs  kernel_feed_slice.rs  kernel_snapshot_roundtrip.rs  kernel_ws_slice.rs  keyboard_event_to_pty.rs  keyboard_repeat_e2e.rs  ls_la_e2e.rs  multi_tab_e2e.rs  osc_title_e2e.rs  pty_calloop_smoke.rs  pty_echo.rs  pty_resize.rs  pty_to_term.rs  resize_chain.rs  rounded_corners_e2e.rs  scrollback_e2e.rs  selection_e2e.rs  single_tab_no_bar_e2e.rs  squircle_sdf_e2e.rs  state_machine.rs  titlebar_text_e2e.rs  xdg_decoration.rs
