[package]
name = "quill"
version = "0.1.0"
edition = "2021"
authors = ["Loong0x00 <loong.0x00@gmail.com>"]

[dependencies]
alacritty_terminal = "0.26"
anyhow = "1"
calloop = { version = "0.14", features = ["signals"] }
cosmic-text = "0.12"
# T-0408: PNG encoding for --headless-screenshot CLI flag (offscreen render →
# PNG, agent 自验视觉)。default-features=false 关 jpg/webp/tiff 等不用 codec,
# 仅留 png feature。详见 docs/adr/0005-image-crate-png-encoding.md。
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
pollster = "0.4"
portable-pty = "0.9"
raw-window-handle = "0.6"
smithay-client-toolkit = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# client_system 切换到 libwayland C 后端 —— wgpu/Vulkan 需要真实 wl_display / wl_surface
# 指针,纯 Rust 后端产出的协议对象不是 ABI 兼容 libwayland。
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
# T-0505: text-input-unstable-v3 (TIv3) 协议绑定。sctk 0.19.2 不封装 IME 协议
# (sctk roadmap 在 0.21+), wayland-protocols = "0.32" 已含 wp/text_input/zv3,
# unstable feature gate 启用 zwp_text_input_v3 + zwp_text_input_manager_v3。
# 详见 docs/adr/0007-wayland-protocols-text-input-v3.md。
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wgpu = "29"
# T-0501: Wayland wl_keyboard 协议给 client 的是 evdev scan code, 必须经
# libxkbcommon 翻译 keymap (compositor 推 fd) + modifier mask → keysym + UTF-8。
# 手写 keymap parser 不可行 (~5K 行 X.Org DSL), 唯一现实路径是 FFI binding。
# 详见 docs/adr/0006-xkbcommon-keyboard-decoder.md。
xkbcommon = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
