[package]
name = "quill"
version = "0.1.0"
edition = "2021"
authors = ["Loong0x00 <loong.0x00@gmail.com>"]

[dependencies]
alacritty_terminal = "0.26"
anyhow = "1"
async-trait = "0.1"
calloop = { version = "0.14", features = ["signals"] }
cosmic-text = "0.12"
futures = "0.3"
# P0 CSWSH 修复(kernel-auth):WS 握手鉴权用的随机 share token 生成。已是依赖树里的
# transitive crate(rand / 其它依赖引),此处提为直接依赖不新增构建单元;走 getrandom(2)
# syscall 拿 CSPRNG 字节,比手搓读 /dev/urandom 更稳(处理 EINTR / 短读 / pool 未就绪)。
getrandom = "0.3"
# T-0408: PNG encoding for --headless-screenshot CLI flag (offscreen render →
# PNG, agent 自验视觉)。default-features=false 关 jpg/webp/tiff 等不用 codec,
# 仅留 png feature。详见 docs/adr/0005-image-crate-png-encoding.md。
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
pollster = "0.4"
portable-pty = "0.9"
raw-window-handle = "0.6"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smithay-client-toolkit = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# T3a / ADR 0016: 同步 WebSocket 传输 (无头内核 → 浏览器镜像)。default-features
# = ["handshake"] 即 HTTP upgrade 握手 + 帧编解码,无 tokio / 无 TLS (传输加密靠
# WireGuard VPN,走 ws://)。选同步版 + std::thread 而非 tokio-tungstenite:单用户
# 少客户端,每连一个阻塞线程足够,且不引入 async runtime 让"Rc 非 Send 的 Session
# 留哪个线程"的推理更绕。详见 docs/adr/0016-websocket-transport.md。
tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
# T-0803 / ADR 0010: grid 占位判定单一权威 (POSIX wcwidth + Unicode East Asian
# Width 表)。把 ShapedGlyph 双宽判定从字形 natural advance ratio 解耦, 让 PUA /
# nerd font 图标 = 1 cell 与 lsd / fzf / starship / ghostty 对齐 (cosmic-text
# 已 transitive 依赖此 crate, 无新二进制开销)。
unicode-width = "0.1"
# client_system 切换到 libwayland C 后端 —— wgpu/Vulkan 需要真实 wl_display / wl_surface
# 指针,纯 Rust 后端产出的协议对象不是 ABI 兼容 libwayland。
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
# T-0505: text-input-unstable-v3 (TIv3) 协议绑定。sctk 0.19.2 不封装 IME 协议
# (sctk roadmap 在 0.21+), wayland-protocols = "0.32" 已含 wp/text_input/zv3,
# unstable feature gate 启用 zwp_text_input_v3 + zwp_text_input_manager_v3。
# 详见 docs/adr/0007-wayland-protocols-text-input-v3.md。
# T-0703-fix: ADR 0008 wp_cursor_shape_v1 路径撤回 — mutter 在 wp_cursor_shape_v1
# 与 xdg_toplevel.resize 内部 cursor name 映射不一致 (hover 用 ns-resize, 拖动
# 用 size_ver), 视觉两套 svg 切换. 改走老 wl_cursor + xcursor theme 路径
# (alacritty/GTK4/Qt/Electron 全部走这条), 与 mutter 自身一致. 详
# docs/adr/0009-wl-cursor-fallback.md. `staging` feature 不再需要, 删除.
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
# T-0703-fix: wayland-cursor 已是 sctk 0.19.2 的 transitive dep (cursor_theme
# 用), 此处提为直接 dep 让本 crate 显式绑住 0.31.x — quill 自管 cursor_surface
# attach + xcursor name fallback chain (sctk ThemedPointer 强耦合 wp_cursor_shape_v1,
# 在我们撤回该协议后无法复用; 直接用 wayland-cursor::CursorTheme 是 sctk 自身
# 走的 legacy 路径, 符合 ADR 0009).
wayland-cursor = "0.31"
wgpu = "29"
# T-0501: Wayland wl_keyboard 协议给 client 的是 evdev scan code, 必须经
# libxkbcommon 翻译 keymap (compositor 推 fd) + modifier mask → keysym + UTF-8。
# 手写 keymap parser 不可行 (~5K 行 X.Org DSL), 唯一现实路径是 FFI binding。
# 详见 docs/adr/0006-xkbcommon-keyboard-decoder.md。
xkbcommon = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
